Updating full rebuild logic